# mlops-practice

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: conf.py  index.rst  installation.rst  usage.rst
src/mlops_practice/: __init__.py  api.py  calculator.py
tests/: test_api.py  test_calculator.py
