[project]
name = "mlops-practice"
version = "0.1.0"
description = "A practice package for learning Poetry, Sphinx, and Docker"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "mlops_practice", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "sphinx (>=7.0,<8.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]
